fix(stylelint): update stylelint config to match patternfly-next

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cleanup": "rimraf dist/package.json dist/bundles dist/src dist/index.d.ts dist/index.metadata.json dist/index.js dist/index.js.map dist/LICENSE dist/README.md",
     "commit": "git-cz",
     "copy-examples:demo": "gulp copy-examples",
+    "lint": "stylelint 'src/**/*.scss' --config ./.stylelintrc --fix",
     "minify": "uglifyjs dist/bundles/ngx-widgets.js --screw-ie8 --compress --mangle --comments --output dist/bundles/patternfly-ng.min.js",
     "postinstall": "node src/scripts/install.js",
     "publish-travis": "node_modules/patternfly-eng-publish/script/publish-ghpages.sh -t dist-demo",
@@ -153,6 +154,11 @@
     "sass-loader": "^6.0.7",
     "semantic-release": "6.3.6",
     "source-map-loader": "0.1.6",
+    "stylelint": "9.2.0",
+    "stylelint-config-recommended-scss": "3.2.0",
+    "stylelint-config-standard": "18.2.0",
+    "stylelint-order": "0.8.1",
+    "stylelint-scss": "3.0.0",
     "style-loader": "0.13.2",
     "stylus": "0.54.5",
     "to-string-loader": "1.1.5",
