fix(build): updated to webpack 4 and Angular 5
The build and demo run, but webpack 4 requires Angular 5 due to typescript 2.7. The tests do not run, which I believe is due to lack of support for webpack 4 and awesome-typescript-loader. There is a new awesome-typescript-loader version in the works, so I’ll push this to a feature branch for now.

See https://github.com/s-panferov/awesome-typescript-loader/issues/534

--- a/tsconfig-aot.json
+++ b/tsconfig-aot.json
@@ -13,7 +13,10 @@
   },
   "files": [
     "src/demo/app.module.ts",
-    "src/demo.ts"
+    "src/demo.ts",
+    "src/demo-aot.ts",
+    "src/polyfills.ts",
+    "src/vendor.ts"
   ],
   "angularCompilerOptions": {
     "genDir": "aot",
