--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:demo": "webpack --config config/webpack.demo.js --progress --profile --bail",
     "build:library": "gulp build",
     "bundle": "webpack --config config/webpack.prod.js --progress --profile --bail",
-    "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage dist distwatch bundles",
+    "clean": "npm run rimraf -- node_modules doc coverage dist distwatch bundles",
     "cleanup": "rimraf dist/package.json dist/bundles dist/src dist/index.d.ts dist/index.metadata.json dist/index.js dist/index.js.map dist/LICENSE dist/README.md",
     "commit": "git-cz",
     "copy-examples:demo": "gulp copy-examples",
@@ -23,6 +23,7 @@
     "rimraf": "rimraf",
     "start:demo": "npm run webpack-dev-server -- --config config/webpack.demo.js --progress --host 0.0.0.0 --port 8001 --profile --watch --content-base dist-demo",
     "test": "karma start",
+    "test:trace-deprecation": "node --trace-deprecation ./node_modules/.bin/karma start",
     "test:debug": "karma --browsers Chrome --no-single-run start",
     "transpile": "gulp transpile",
     "ts:lint": "tslint -p tslint.json 'index.ts' 'src/**/*.ts'",
@@ -43,9 +44,12 @@
     "angular 2",
     "angular4",
     "angular 4",
+    "angular5",
+    "angular 5",
     "ng",
     "ng2",
-    "ng4"
+    "ng4",
+    "ng5"
   ],
   "homepage": "https://github.com/patternfly/patternfly-ng",
   "repository": {
@@ -56,126 +60,129 @@
     "url": "https://github.com/patternfly/patternfly-ng/issues"
   },
   "engines": {
-    "node": ">=6.9.1",
-    "npm": ">=3"
+    "node": ">=8.3.0",
+    "npm": ">=5.3.0"
   },
   "peerDependencies": {
-    "@angular/common": ">=4.0.1 || >5.0.0",
-    "@angular/compiler": ">=4.0.1 || >5.0.0",
-    "@angular/core": ">=4.0.1 || >5.0.0",
-    "@angular/forms": ">=4.0.1 || >5.0.0",
-    "typescript": ">=2.3.4",
+    "@angular/common": ">=5.0.0",
+    "@angular/compiler": ">=5.0.0",
+    "@angular/core": ">=5.0.0",
+    "@angular/forms": ">=5.0.0",
+    "typescript": ">=2.7.2",
     "rxjs": ">=5.0.1"
   },
   "dependencies": {
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.5",
     "@patternfly/patternfly-next-workshop": "0.0.4"
   },
   "optionalDependencies": {},
   "devDependencies": {
-    "@angular/animations": "^4.0.1",
-    "@angular/common": "^4.0.1",
-    "@angular/compiler": "^4.0.1",
-    "@angular/compiler-cli": "^4.0.1",
-    "@angular/core": "^4.0.1",
-    "@angular/forms": "^4.0.1",
-    "@angular/http": "^4.0.1",
-    "@angular/platform-browser": "^4.0.1",
-    "@angular/platform-browser-dynamic": "^4.0.1",
-    "@angular/platform-server": "^4.0.1",
-    "@angular/router": "^4.0.1",
-    "@ngtools/webpack": "1.8.4",
-    "@types/c3": "0.4.47",
-    "@types/jasmine": "2.5.43",
-    "@types/lodash": "4.14.54",
+    "@angular-devkit/core": "0.5.1",
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/platform-server": "^5.0.0",
+    "@angular/router": "^5.0.0",
+    "@ngtools/webpack": "6.0.0-rc.1",
+    "@types/c3": "0.5.0",
+    "@types/jasmine": "2.8.6",
+    "@types/lodash": "4.14.106",
     "angular2-template-loader": "0.6.2",
-    "awesome-typescript-loader": "3.1.2",
-    "bootstrap": "~3.3.7",
-    "bootstrap-sass": "^3.3.7",
+    "awesome-typescript-loader": "4.0.1",
+    "bootstrap": "3.3.7",
+    "bootstrap-sass": "3.3.7",
     "child_process": "1.0.2",
-    "clean-webpack-plugin": "0.1.15",
-    "codelyzer": "4.0.0",
+    "clean-webpack-plugin": "0.1.19",
+    "codelyzer": "4.2.1",
     "commitizen": "2.9.6",
-    "copy-webpack-plugin": "4.0.1",
-    "core-js": "2.4.1",
-    "css-loader": "0.26.2",
+    "copy-webpack-plugin": "4.5.1",
+    "core-js": "2.5.4",
+    "css-loader": "0.28.11",
     "css-to-string-loader": "0.1.3",
     "cz-conventional-changelog": "2.1.0",
-    "del": "2.2.2",
-    "extract-text-webpack-plugin": "2.1.0",
+    "del": "3.0.0",
+    "extract-text-webpack-plugin": "next",
     "file-loader": "1.1.11",
     "font-awesome-sass": "^4.7.0",
     "gulp": "3.9.1",
     "gulp-changed": "2.0.0",
     "gulp-cssmin": "0.2.0",
     "gulp-ngc": "0.2.0",
-    "gulp-replace": "0.6.1",
     "gulp-rename": "1.2.2",
+    "gulp-replace": "0.6.1",
     "gulp-sass": "^3.2.1",
     "gulp-sourcemaps": "2.4.1",
     "gulp-string-replace": "1.0.0",
     "gulp-stylelint": "5.0.0",
     "highlight.js": "9.12.0",
-    "html-loader": "0.4.5",
-    "html-minifier": "3.5.2",
-    "html-webpack-plugin": "2.28.0",
-    "husky": "0.13.2",
-    "jasmine-core": "2.8.0",
-    "json-loader": "0.5.4",
+    "html-loader": "0.5.5",
+    "html-minifier": "3.5.13",
+    "html-webpack-plugin": "3.2.0",
+    "husky": "0.14.3",
+    "jasmine-core": "3.1.0",
+    "json-loader": "0.5.7",
     "json-stringify": "1.0.0",
-    "karma": "1.7.0",
+    "karma": "2.0.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
     "karma-coverage": "1.1.1",
     "karma-htmlfile-reporter": "0.3.5",
     "karma-jasmine": "1.1.1",
-    "karma-jasmine-html-reporter": "0.2.2",
+    "karma-jasmine-html-reporter": "1.0.0",
     "karma-mocha-reporter": "2.2.5",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "2.0.9",
-    "less": "2.7.2",
-    "less-loader": "4.0.3",
-    "markdown-it": "8.4.0",
-    "mocha": "3.2.0",
-    "npm-run-all": "4.0.2",
-    "nsp": "2.7.0",
+    "karma-webpack": "4.0.0-beta.0",
+    "less": "3.0.1",
+    "less-loader": "4.1.0",
+    "markdown-it": "8.4.1",
+    "mocha": "5.0.5",
+    "npm-run-all": "4.1.2",
+    "nsp": "3.2.1",
     "optimize-js-plugin": "0.0.4",
     "patternfly": "^3.42.0",
     "patternfly-eng-publish": "0.0.4",
     "patternfly-eng-release": "3.26.54",
-    "phantomjs-prebuilt": "2.1.14",
-    "protractor": "5.1.1",
+    "phantomjs-prebuilt": "2.1.16",
+    "protractor": "5.3.1",
     "raw-loader": "0.5.1",
-    "reflect-metadata": "0.1.10",
-    "rimraf": "2.6.1",
-    "rxjs": "^5.0.1",
-    "sass": "^1.1.1",
+    "reflect-metadata": "0.1.12",
+    "rimraf": "2.6.2",
+    "rxjs": "5.5.8",
+    "sass": "1.1.1",
     "sass-loader": "^6.0.7",
-    "semantic-release": "6.3.6",
-    "source-map-loader": "0.1.6",
+    "semantic-release": "15.1.5",
+    "source-map-loader": "0.2.3",
+    "style-loader": "0.20.3",
     "stylelint": "9.2.0",
     "stylelint-config-recommended-scss": "3.2.0",
     "stylelint-config-standard": "18.2.0",
     "stylelint-order": "0.8.1",
     "stylelint-scss": "3.0.0",
-    "style-loader": "0.20.3",
     "stylus": "0.54.5",
     "to-string-loader": "1.1.5",
     "ts-helpers": "1.1.2",
-    "ts-node": "2.1.0",
+    "ts-node": "5.0.1",
     "tslint": "5.8.0",
-    "typedoc": "^0.5.7",
+    "typedoc": "0.11.1",
     "typedoc-webpack-plugin": "1.1.4",
-    "typescript": "2.6.2",
+    "typescript": "2.7.2",
+    "uglifyjs-webpack-plugin": "1.2.4",
     "url-loader": "1.0.1",
-    "webpack": "2.2.1",
-    "webpack-bundle-analyzer": "2.3.0",
-    "webpack-dashboard": "0.3.0",
-    "webpack-dev-server": "2.4.1",
-    "webpack-md5-hash": "0.0.5",
-    "webpack-merge": "3.0.0",
-    "zone.js": "0.8.20"
+    "webpack": "4.5.0",
+    "webpack-bundle-analyzer": "2.11.1",
+    "webpack-cli": "2.0.14",
+    "webpack-dashboard": "1.1.1",
+    "webpack-dev-server": "3.1.1",
+    "webpack-md5-hash": "0.0.6",
+    "webpack-merge": "4.1.2",
+    "zone.js": "0.8.25"
   },
   "release": {
     "branch": "master-dist",
